2008-01-28  Torsten Rahn  <rahn@kde.org>

    * src/lib/MapTheme.{cpp,h}:
    * src/lib/MarbleLegendBrowser.{cpp,h}:
    * data/maps/earth/citylights/citylights.dgml:
    * data/maps/earth/bluemarble/bluemarble.dgml:

    - Allowing a completely custom legend.html per theme
    - changing the relative position of the pixmap path
      in the dgml file to allow access to the data/bitmaps
      directory.

2008-01-28  Torsten Rahn  <rahn@kde.org>

    * src/lib/MapTheme.{cpp,h}:
    * src/lib/MarbleLegendBrowser.{cpp,h}:
    * src/lib/MarbleModel.{cpp,h}:
    * src/lib/MapTheme.h:
    * data/maps/earth/srtm/srtm.dgml:
    * data/legend.html:
    * data/CMakeLists.txt:

    - Continuing Inge's work and extending the 
    MarbleLegendBrowser to support custom legend items.

2008-01-28  Torsten Rahn  <rahn@kde.org>

    * src/lib/MapTheme.cpp:
    * data/svg/application-x-marble.svg:
    * data/svg/application-x-marble.png:
    * data/CMakeLists.txt:

    - Adding Nuno Pinheiro's Marble Mimetype icon. 
    - Using it as a standard preview icon for map themes.

2008-01-27  Torsten Rahn  <rahn@kde.org>

	* src/lib/MarbleControlBox.ui: set the locationListView's 
	property "uniformItemSizes" "true". This solves the 
	problem of delayed item appearance.
	Thanks to Trolltech's Alessandro Portale for coming up
	with this suggestion.
	
2008-01-27  Inge Wallin  <ingwa@c83-252-211-36.bredband.comhem.se>

	Step 2 for definition of the legend in DGML:
	* src/lib/MarbleLegendBrowser.{h,cpp} (MarbleLegendBrowser):
	Insert generated HTML into the legend
	(setMarbleWidget): New function
	(genSectionsHtml): New function
	All: follow coding standards
	* src/lib/MarbleControlBox.cpp (addMarbleWidget): Set the marble
	widget for the legend browser
	* data/legend.html: Add a marker where generated contents should
	be inserted
	
2008-01-26  Inge Wallin  <inge@lysator.liu.se>

	Start of definition of the Legend in DGML.
	* src/lib/MapTheme.cpp (class LegendSection): new class