@@ -24,7 +24,7 @@
   <p> The Marble Team would like to thank its members who participated in
 the Google Summer of Code for their successful work on Marble:
   <p>
-    Carlos Licea <a href="mailto:carlos_licea@hotmail.com">carlos_licea@hotmail.com</a><br>
+    Carlos Licea <a href="mailto:carlos.licea@kdemail.net">carlos.licea@kdemail.net</a><br>
     <i>Project: Equirectangular Projection ("Flat Map")</i> 
   </p>
   <p>
