@@ -1,3 +1,9 @@
+2008-01-28  Carlos Licea  <carlos.licea@kdemail.net>
+    * data/credits_authors.html:
+    -Changed my e-Mail to carlos.licea@kdemail.net
+    * src/lib/FlatScanLineTextureMapper.cpp:
+    -Beggin the implementation of the Mercator projection.    
+
 2008-01-28  Torsten Rahn  <rahn@kde.org>
 
     * src/lib/MapTheme.{cpp,h}:
